package ecourse.base.usermanagement.domain.Course;

public enum CourseStatus {

    OPEN, CLOSED, OPEN_ENROLLMENT, CLOSED_ENROLLMENT;
}
